<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_gravity="end"
    tools:context=".ui.AsociarTracksFragment">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/my_toolbar"
        app:title="Crear album"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        app:subtitleTextColor="@color/white"
        app:theme="@style/ThemeOverlay.AppCompat"
        app:titleTextColor="@color/white"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10sp"
        android:orientation="vertical">

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:height="24dp" />

        <EditText

            android:id="@+id/track_nombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="Nombre"
            android:background="@color/white"
            android:hint="Nombre de la canción"
            android:inputType="text"
            android:minHeight="48dp"
            android:padding="10dp"
            android:textColorHint="#546E7A"
            tools:ignore="HardcodedText" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="12dp" />

        <EditText
            android:id="@+id/track_duration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="Cover"
            android:background="@color/white"
            android:hint="@string/duraci_n_del_track"
            android:inputType="text"
            android:minHeight="48dp"
            android:padding="10dp"
            android:textColorHint="#546E7A" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="12dp" />

        <EditText
            android:id="@+id/album_id_asociar_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="Cover"
            android:background="@color/white"
            android:hint="@string/id_del_album_a_asociar"
            android:inputType="number"
            android:minHeight="48dp"
            android:padding="10dp"
            android:textColorHint="#546E7A" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="12dp" />

    </LinearLayout>

    <TextView
        android:id="@+id/get_result_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/respuesta"
        android:visibility="invisible"
        android:textSize="30sp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="12dp" />



    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">

        <Button
            android:id="@+id/cancel_track_button"
            android:layout_width="wrap_content"
            android:minWidth="120sp"
            android:layout_height="wrap_content"
            android:minHeight="48sp"
            android:background="@color/purple_700"
            android:text="@string/Cancelar_button_text" />

        <Space
            android:layout_width="30dp"
            android:layout_height="48dp"/>

        <Button
            android:id="@+id/post_track_button"
            android:layout_width="wrap_content"
            android:minWidth="120sp"
            android:layout_height="wrap_content"
            android:minHeight="48sp"
            android:background="@color/stroke_color"
            android:text="@string/Asociar_tracks" />

    </LinearLayout>

</LinearLayout>