<resources>
    <string name="app_name">Vinilos</string>

    <string name="title_tracks">Tracks</string>
    <string name="title_albums">Albums</string>
    <string name="title_detalle_albums">Detalle Album</string>
    <string name="title_detalle_artista">Detalle Artista</string>
    <string name="title_artistas">Artistas</string>
    <string name="title_coleccionistas">Coleccionistas</string>
    <string name="title_detalle_coleccionistas">Detalle Coleccionista</string>

    <string name="Asociar_tracks">Asociar tracks</string>


    <string name="Crear_button_text">Crear</string>
    <string name="Cancelar_button_text">Volver</string>
    <string name="Nombre_placeholder">Nombre</string>
    <string name="Cover_placeholder">Cover</string>
    <string name="Lanzamiento_placeholder">Fecha de lanzamiento dd/mm/yyyy</string>
    <string name="Descripcion_placeholder">Descripción</string>

    <string name="txt_no_albums">No hay album para este id</string>
    <string name="txt_no_artistas">No hay artistas para este id</string>
    <string name="title_collectors">Coleccionistas</string>

    <string name="crear_album_button_description">Crear album</string>
    <string name="album_creado_text">Album Creado!</string>
    <string name="form_required_field">Campo obligatorio</string>
    <string name="datos_de_contacto">Datos de contacto</string>
    <string name="artistas_favoritos">Artistas favoritos</string>
    <string name="numero_de_telefono">Numero de telefono: %1$s</string>
    <string name="correo_electronico">Correo electronico: %1$s</string>
    <string name="listado_de_coleccionistas">Listado de coleccionistas</string>
    <string name="respuesta_crear_album">respuesta</string>
    <string name="listado_de_artistas">Listado de artistas</string>
    <string name="listado_de_albumes">Listado de albumes</string>
    <string name="id_del_album_a_asociar">ID del album a asociar</string>
    <string name="respuesta">respuesta</string>
    <string name="duraci_n_del_track">Duración del track</string>

    <string-array name="genres">
        <item>Genero</item>
        <item>Classical</item>
        <item>Salsa</item>
        <item>Rock</item>
        <item>Folk</item>
    </string-array>

    <string-array name="recordLabels">
        <item>Disquera</item>
        <item>Sony Music</item>
        <item>EMI</item>
        <item>Discos Fuentes</item>
        <item>Elektra</item>
        <item>Fania Records</item>
    </string-array>

</resources>